# NSU-Labs

./: readme.md
Bachelor/C-programming/: readme.md
Bachelor/CPP-Programming/PrisonersDilemma/: CMakeLists.txt
Bachelor/CPP-Programming/PrisonersDilemma/matrices/: matrix_12  matrix_15  matrix_16  matrix_21  matrix_22  matrix_26  matrix_27  matrix_6
Bachelor/CPP-Programming/PrisonersDilemma/src/strategies/complex_strategies/: kind_strategy.cpp  tit_for_tat_strategy.h
Bachelor/CPP-Programming/PrisonersDilemma/src/strategies/simple_strategies/: constant_strategies.h  random_strategy.cpp
Bachelor/Computers-and-Peripherals/OpenCV + libusb/OpenCV/: CMakeLists.txt
Bachelor/Year-2/Parallel-Programming/POSIX-Threads/src/: CMakeLists.txt  config.h  main.c  manager.c  manager.h  message.c  message.h  task.c  task.h  tasks_list.c  tasks_list.h  tasks_response.c  tasks_response.h  worker.c  worker.h
Bachelor/Year-3/OS/project/: CMakeLists.txt  readme.md
Bachelor/Year-3/OS/project/src/: main.cpp
Bachelor/Year-3/OS/project/src/cache/: cache.cpp  cache.hpp
Bachelor/Year-3/OS/project/src/http/: dto.hpp  http_errors.hpp  http_request_parser.cpp  http_request_parser.hpp  http_response_creator.cpp  http_response_creator.hpp  http_response_parser.cpp  http_response_parser.hpp  http_utils.cpp  http_utils.hpp  request_analyzer.cpp  request_analyzer.hpp
Bachelor/Year-3/OS/project/src/http/httpparser/: httprequestparser.h  httpresponseparser.h  readme.md  urlparser.h
Bachelor/Year-3/OS/project/src/logging/: file_logger.cpp  file_logger.hpp  logger.hpp  std_logger.cpp  std_logger.hpp  synchronous_logger.cpp  synchronous_logger.hpp
Bachelor/Year-3/OS/project/src/networking/: connection.cpp  connection.hpp  server.cpp  server.hpp
Bachelor/Year-3/OS/project/src/proxy/: proxy.cpp  proxy.hpp
Bachelor/Year-3/OS/project/src/utils/: abstract_error.hpp  cerror.cpp  cerror.hpp  mutex.cpp  mutex.hpp  rwlock.cpp  rwlock.hpp  socket_actions.hpp  socket_info.hpp  socket_like.hpp  socket_like_selector.cpp  socket_like_selector.hpp  socket_selector.hpp  thread.cpp  thread.hpp  transmitter.hpp  triplet.hpp
Bachelor/Year-3/OS/project/src/utils_linux/: errors.cpp  errors.hpp  socket_actions.cpp  socket_selector.cpp  transmitter.cpp
Bachelor/Year-3/OS/project/src/work/: client_context.cpp  context.hpp  destination_context.cpp  thread_pool.cpp  thread_pool.hpp  worker.cpp  worker.hpp  worker_transmitter.cpp  worker_transmitter.hpp
Bachelor/Year-3/OS/project/tests/: 1-sequential-test.sh  2-concurrent-test.sh  3-cache-invalidation.sh  readme.md  test.sh  test2.sh
Bachelor/Year-3/OS/synchronization/4/: CMakeLists.txt  main.c  readme.md  storage.c  storage.h  utils.h
Bachelor/Year-3/OS/synchronization/4/my_mutex/: my_mutex.c
Bachelor/Year-3/OS/synchronization/4/src/: main.c  storage.c  storage.h  utils.c
Bachelor/Year-3/OS/synchronization/4/src/sync/: sync.h
Bachelor/Year-3/OS/synchronization/4/src/sync/mutex/: sync.c
Bachelor/Year-3/OS/synchronization/4/src/sync/my_mutex/: my_mutex.h  sync.c
Bachelor/Year-3/OS/synchronization/4/src/sync/my_spin/: my_spin.c  sync.c
Bachelor/Year-3/OS/synchronization/4/src/sync/rwlock/: sync.c
Bachelor/Year-3/OS/synchronization/4/src/sync/spin/: sync.c
Bachelor/Year-3/OS/threads/4/: CMakeLists.txt
Bachelor/Year-3/OS/threads/4/mythread/: gc_thread.c  gc_thread.h  list.c  list.h  my_thread_data.c  my_thread_data.h  mythread.c  utils.c
Bachelor/Year-3/OS/threads/4/src/: main.c
Bachelor/Year-3/OS/threads/4/src/mythread/: gc_thread.c  list.h  my_thread_data.c  mythread.c  mythread.h  utils.c  utils.h
Bachelor/Year-3/OS/threads/5/: CMakeLists.txt  main.c
Bachelor/Year-3/OS/threads/5/uthread/: scheduler.c  scheduler.h  uthread.c  uthread.h  uthread_data.c  uthread_data.h  uthread_queue.c  uthread_queue.h  utils.c  utils.h
C-programming/: readme.md
C-programming/AVLTree/: args.h  avl_tree.c  avl_tree.h  main.c
C-programming/BMP/: main.c
C-programming/BinaryHeap/: heap.c  heap.h
C-programming/BinaryTree/: binaryTree.c  binaryTree.h
C-programming/Boyer-Moore-Horspool-algorithm/: main.c
C-programming/CLI/: conversion.c  conversion.h  quantity.h
C-programming/Dijkstra-algorithm/: adjacency_matrix.c  adjacency_matrix.h  args.c  graph_input.h  graph_print.c  graph_print.h  main.c
C-programming/GFX/: CMakeLists.txt
C-programming/GFX/src/: drawer.c  generations_container.c  main.c  utils.c
C-programming/Huffman/: utils.c  utils.h
C-programming/InsertionSort/: main.c
C-programming/Kruskal-algorithm/: disjoint_set.c  graph_input.c  graph_input.h  kruskal_algorithm.c
C-programming/Narayana-Algorithm/: main.c  permutation.c
C-programming/Numeral-systems-calculator/: main.c
C-programming/NurseryRhyme/: main.c
C-programming/PiEstimation/: main.c
C-programming/Prim-algorithm/: edge.c  graph.c  utils.c
CPP-Programming/: readme.md
CPP-Programming/BigInt/: CMakeLists.txt
CPP-Programming/BigInt/src/: big_int.cpp  big_int.h  numeric_string.h  smart_vector.cpp  smart_vector.h  utils.cpp
CPP-Programming/BigInt/src/tests/: size_test.cpp
CPP-Programming/CSVParser/: CMakeLists.txt
CPP-Programming/CSVParser/src/: csv_parsing.hpp  main.cpp  tuple_print.hpp  utils.cpp  utils.hpp
CPP-Programming/CSVParser/tests/: csv_parser_tests.cpp
CPP-Programming/CSVParser/tests/csv_files/: 10.csv  11.csv  12.csv  13.csv  17.csv  20.csv  3.csv  9.csv
CPP-Programming/SoundProcessor/: CMakeLists.txt
CPP-Programming/SoundProcessor/src/: converters_factory.cpp  converters_factory.h  custom_exceptions.h  utils.cpp
CPP-Programming/SoundProcessor/src/converters/: abstract_converter.h  all_converters.h  converters_utils.cpp  cut_converter.cpp  insert_converter.h  mix_converter.cpp
CPP-Programming/SoundProcessor/tests/config_files_for_tests/: all_correct_commands.txt
Digital-Circuitry/: README.md
EVM-and-PU/: README.md
Java-Programming/: readme.md
JavaProgramming/: readme.md
Networks/: readme.md
Networks/ARP/: arp.pkt  (+1 more)
OS/: readme.md
OS-Labs/: readme.md
Parallel-Programming/: readme.md
ParallelProgramming/: readme.md
(+1467 files in other folders)
